--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,21 +7,46 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="jp.widgets.kumamon.notice.MainActivity"
-            android:label="@string/app_name" >
+        <receiver
+            android:name="jp.widgets.kumamon.notice.KumamonNoticeWidget"
+            android:label="@string/notice_widget" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_notice" />
+        </receiver>
+
+        <service
+            android:name="jp.widgets.kumamon.notice.KumamonNoticeWidget$WidgetService"
+            android:exported="false" />
+        <service
+            android:name="jp.widgets.kumamon.notice.NoticeWidgetService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+        <activity
+            android:name="jp.widgets.kumamon.notice.NoticeWidgetConfigure"
+            android:exported="false"
+            android:theme="@style/Theme.Dialog" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="jp.widgets.kumamon.notice.NoticeWidgetEventDialog"
+            android:exported="false"
+            android:theme="@style/Theme.Dialog" />
     </application>
 
 </manifest>
